<resources>
    <string name="app_name">NC-BASIC-UI</string>

    <!-- homepage 底部radiogroup-->
    <string name="activity_bottom_button1_str">首 页</string>
    <string name="activity_bottom_button2_str">发 现</string>
    <string name="activity_bottom_button3_str">关 注</string>
    <string name="activity_bottom_button4_str">我 的</string>

    <!-- homepage 顶部tab-->
    <string name="fragment_tab_recommend">音乐推荐</string>
    <string name="fragment_tab_chat">音乐榜单</string>
    <string name="fragment_tab_owner">热门视频</string>
    <string name="fragment_tab_hottop">每日新闻</string>

    <!-- recommend page -->
    <string name="fragment_private_recommend_str">私人FM</string>
    <string name="fragment_daily_recommend_str">每日歌曲推荐</string>
    <string name="fragment_hotsong_recommend_str">云音乐热歌榜</string>
    <string name="fragment_recommend_itemcontroller_str">调整栏目顺序</string>
    <string name="fragment_recommend_itemcontroller_txt_str">现在可以根据个人喜好，自由调整首页栏目循序啦~</string>

    <!-- recommend sort page-->
    <string name="recommend_itemcontroller_item1_str">推荐歌单</string>
    <string name="recommend_itemcontroller_item2_str">独家放送</string>
    <string name="recommend_itemcontroller_item3_str">最新音乐</string>
    <string name="recommend_itemcontroller_item4_str">推荐MV</string>
    <string name="recommend_itemcontroller_item5_str">精选专栏</string>
    <string name="recommend_itemcontroller_item6_str">主播电台</string>
    <string name="recommend_itemcontroller_notice_str">想调整首页栏目的顺序？按住右边的按钮拖动即可</string>
    <string name="item_perfectmusic_title_str">专栏</string>

    <!-- news-->
    <string name="fragment_news_title">今日热闻</string>
    <string name="video_str">VideoBeanForClient</string>
    <string name="card_str">HorizontalScrollCard</string>
    <string name="hot_str">近 期 热 门</string>

    <!--menudetail-->
    <string name="string_menu">歌单</string>
    <string name="string_menu_title_desc">编辑推荐: 你不喜欢也没有办法</string>

    <!--behavior-->
    <string name="string_overscroll_behavior">com.example.nc_common_resource.view.design.AppBarLayoutScrollViewBehavior</string>


</resources>
