<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- descendantFocusability解决回到界面recycler抢占焦点把上面的布局顶上去-->
    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <com.jude.rollviewpager.RollPagerView
            android:id="@+id/rollpager_recommend"
            android:layout_width="match_parent"
            android:layout_height="@dimen/viewpager_height"
            app:rollviewpager_hint_color="@color/color_rollpager_hint_bg"
            app:rollviewpager_play_delay="4000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fragment_daily_recimmend_dimens"
            android:background="@color/color_padding_chatlist"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/rlayout_private_recommend"
                style="@style/styles_recommend_linearLayout">

                <ImageView
                    style="@style/styles_recommend_imageview"
                    android:src="@drawable/selector_recommend_private" />

                <TextView
                    style="@style/styles_recommend_textview"
                    android:text="@string/fragment_private_recommend_str" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlayout_daily_recommend"
                style="@style/styles_recommend_linearLayout">

                <ImageView
                    style="@style/styles_recommend_imageview"
                    android:src="@drawable/selector_recommend_daily" />

                <TextView
                    style="@style/styles_recommend_textview"
                    android:text="@string/fragment_daily_recommend_str" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rlayout_hotmusic_recommend"
                style="@style/styles_recommend_linearLayout">

                <ImageView
                    style="@style/styles_recommend_imageview"
                    android:src="@drawable/selector_recommend_hotsong" />

                <TextView
                    style="@style/styles_recommend_textview"
                    android:text="@string/fragment_hotsong_recommend_str" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_splitline_height"
            android:background="@color/color_splitlint_bg" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_recomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_lh_22"
            android:background="@color/color_padding_chatlist" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_lh_0"
            android:background="@color/color_splitlint_bg" />

        <LinearLayout
            android:id="@+id/llayout_item_controller"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_recommend_controller_height"
            android:background="@color/color_padding_chatlist"
            android:orientation="vertical">

            <TextView
                style="@style/styles_wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_recommend_textview_magintop"
                android:text="@string/fragment_recommend_itemcontroller_txt_str"
                android:textColor="@color/color_itemcontroller"
                android:textSize="@dimen/common_sz_10" />

            <RelativeLayout
                android:id="@+id/rlayout_itemcontroller"
                style="@style/styles_wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimens_recommend_controller_magintop"
                android:background="@drawable/selector_itemcontroller"
                android:clickable="true">

                <TextView
                    style="@style/styles_wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/fragment_recommend_itemcontroller_str"
                    android:textColor="@color/color_bg_top_red"
                    android:textSize="@dimen/common_sz_10" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>